fixed base.html title

--- a/templates/templates/base.html
+++ b/templates/templates/base.html
@@ -6,7 +6,7 @@
     <link rel="shortcut icon" type="image/png" href="{% static "/favicon.ico"%}" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-    <title>BEP Marketplace</title>
+    <title>django_baseproject</title>
     {% block head %}
     <link href="{% static "css/metro.min.css" %}" rel="stylesheet">
     <link href="{% static "css/metro-icons.min.css" %}" rel="stylesheet">
