--- a/templates/templates/GenericForm.html
+++ b/templates/templates/GenericForm.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %}
 {% load staticfiles %}
+{% load custom_filters %}
+{% block stylesheets %}
+    <link href="{% static "css/jquery.datetimepicker.css" %}" rel="stylesheet">
+{% endblock %}
 {% block body %}
 {% if formtitle %}
 <h1>{{ formtitle }}</h1>
@@ -10,21 +14,48 @@
 <form action="{% if actionlink %}{%  url actionlink %}{% endif %}" method="post" enctype="multipart/form-data" novalidate>
     {% csrf_token %}
 <table class="table" style="text-align:left;">
-{{  form.as_table }}
+{% if formset %}
+    {{ formset.management_form }}
+    {% for form in formset %}
+        {{  form.as_table }}
+        <tr><th><hr /></th><td><hr /></td></tr>
+    {% endfor %}
+{% else %}
+    {{ form.as_table }}
+{% endif %}
 <tr><td>
     <button class="button success" type="submit">{% if buttontext %}{{ buttontext }}{% else %}Go{% endif %}</button>
-
 </td><td></td></tr>
 </table>
 </form>
 {% endblock %}
 {% block scripts %}
 {{ block.super }}
+    <script src="{% static "js/php-date-formatter.min.js" %}"></script>
+    <script src="{% static "js/jquery.datetimepicker.full.min.js" %}"></script>
     <script src="{%  static "js/select2.min.js" %}"></script>
     <script type="text/javascript">
         $(function(){
             $(".select2-tag-enable").select2({
                 minimumResultsForSearch: 6
+            });
+            $.datetimepicker.setLocale('en');
+            $('.metrotimepicker').datetimepicker({
+                datepicker:false,
+                format:'H:i',
+                step: 5
+            });
+            $('.metrodatetimepicker').datetimepicker({
+                format:'Y-m-d H:i',
+                step: 5,
+                minDate: '-1970-01-02', // yesterday
+                //maxDate: ''//last date in this timeslot
+            });
+            $('.metrodatepicker').datetimepicker({
+                timepicker:false,
+                format:'Y-m-d',
+                minDate: '-1970-01-02', // yesterday
+                //maxDate: '' //last date in this timeslot
             });
         });
     </script>
